syntax = "proto3";

package user;

option go_package = "./user";

// User 服务 - 供其他微服务内部调用
service User {
    // 获取单个用户信息
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    
    // 批量获取用户信息（消息列表、群成员列表等场景）
    rpc BatchGetUsers(BatchGetUsersRequest) returns (BatchGetUsersResponse);
    
    // 搜索用户（用于添加好友 - 精确匹配）
    rpc SearchUser(SearchUserRequest) returns (SearchUserResponse);
    
    // 更新用户信息
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    
    // 检查用户是否存在
    rpc CheckUserExist(CheckUserExistRequest) returns (CheckUserExistResponse);
    
    // ========== Auth服务专用接口 ==========
    // 创建用户（注册用）
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    
    // 验证用户密码（登录用）
    rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse);
    
    // 按字段查找用户（支持用户名/手机/邮箱）
    rpc FindUserByField(FindUserByFieldRequest) returns (FindUserByFieldResponse);
    
    // 模糊搜索用户（全局搜索用）
    rpc SearchUsersByKeyword(SearchUsersByKeywordRequest) returns (SearchUsersByKeywordResponse);
    
    // 更新用户密码（忘记密码、修改密码用）
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

// ==================== 用户信息结构 ====================
message UserInfo {
    int64 id = 1;
    string username = 2;
    string nickname = 3;
    string avatar = 4;
    string phone = 5;
    string email = 6;
    int64 status = 7;      // 1-正常 0-禁用
    int64 created_at = 8;  // 时间戳
    string signature = 9;
    int64 gender = 10;
    string region = 11;
}

// ==================== GetUser ====================
message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    UserInfo user = 1;
}

// ==================== BatchGetUsers ====================
message BatchGetUsersRequest {
    repeated int64 ids = 1;  // 用户ID列表，最多100个
}

message BatchGetUsersResponse {
    repeated UserInfo users = 1;
}

// ==================== SearchUser ====================
message SearchUserRequest {
    string keyword = 1;  // 关键词（用户名/手机/邮箱）
    int64 page = 2;      // 页码，从1开始
    int64 page_size = 3; // 每页数量，默认20
}

message SearchUserResponse {
    repeated UserInfo users = 1;
    int64 total = 2;
}

// ==================== UpdateUser ====================
message UpdateUserRequest {
    int64 id = 1;
    string nickname = 2;  // 空字符串表示不更新
    string avatar = 3;
    string signature = 5;
    int64 gender = 6;
    string region = 7;
    string phone = 4;
}

message UpdateUserResponse {
    UserInfo user = 1;
}

// ==================== CheckUserExist ====================
message CheckUserExistRequest {
    int64 id = 1;
}

message CheckUserExistResponse {
    bool exist = 1;
}

// ==================== CreateUser ====================
message CreateUserRequest {
    string username = 1;
    string password = 2;  // 已加密的密码
    string email = 3;
    string phone = 4;     // 可选
    string nickname = 5;  // 可选，为空时使用username
}

message CreateUserResponse {
    int64 user_id = 1;
    UserInfo user = 2;
}

// ==================== VerifyPassword ====================
message VerifyPasswordRequest {
    string username = 1;  // 用户名/手机号/邮箱
    string password = 2;  // 明文密码
}

message VerifyPasswordResponse {
    bool success = 1;
    UserInfo user = 2;  // 验证成功时返回用户信息
    string message = 3; // 失败原因
}

// ==================== FindUserByField ====================
message FindUserByFieldRequest {
    string field_type = 1;  // "username" | "phone" | "email"
    string field_value = 2;
}

message FindUserByFieldResponse {
    UserInfo user = 1;
    bool found = 2;
}

// ==================== SearchUsersByKeyword ====================
message SearchUsersByKeywordRequest {
    string keyword = 1;  // 模糊搜索关键词
}

message SearchUsersByKeywordResponse {
    repeated UserInfo users = 1;
}

// ==================== UpdatePassword ====================
message UpdatePasswordRequest {
    int64 user_id = 1;
    string new_password = 2;  // 已加密的新密码
}

message UpdatePasswordResponse {
    bool success = 1;
}
